crates/swc/tests/tsc-references/internalModules/moduleDeclarations/invalidNestedModules/input.ts/es2015.2.minified/output.js
var A, M2;
!function(A1) {
    var B;
    let B1, C;
    B = B1 || (B1 = {
    }), (C || (C = {
    })).Point = class {
    }, B.C = C, A1.B = B1;
}(A || (A = {
})), (function(A2) {
    let B;
    (B || (B = {
    })).C = class {
    }, A2.B = B;
})(A || (A = {
})), (function(M21) {
    let X;
    (X || (X = {
    })).Point = class {
    }, M21.X = X;
})(M2 || (M2 = {
})), (function(M22) {
    var Point;
    let X;
    (X || (X = {
    })).Point = Point, M22.X = X;
})(M2 || (M2 = {
}));
